--- a/aboutpage.html
+++ b/aboutpage.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <title>Passport to India</title>
@@ -9,6 +10,7 @@
       <li><a href="aboutpage.html">ABOUT</a></li>
       <li><a href="index.html">HOME</a></li>
     </ul>
+
     <ul id="menuNav">
       <li><a href="chickenpakora.html">Chicken Pakora</a></li>
       <li><a href="gobimanchurian.html">Gobi Manchurian</a></li>
@@ -17,24 +19,22 @@
       <li><a href="gulabjamun.html">Gulab Jamun</a></li>
     </ul>
 
+
+
+
+
     <!--Restaurant Contents, Changes for the various pages-->
     <div id=para>
         <center>
-            <h1>Passport to India</h1>
-            <p>Passport to India serves a traditional Indian cuisine that will take guests to the equisite taste of India.</p>
-            <p>Our mission is to share our family's authentic Indian recipes with the world.</P>
-            <p>We aim to connect our dining experience in the same way our food is connected to the magestic taste of India.</p>
+            <h1>About</h1>
+            <p>Passport to India is a family-owned restuarant that focuses on the different flavors and ingredients of India.</p>
+            <p>The restuarant has been open since 2015 and has been thriving since.</p>
+            <p>We work towards delivering an amazing dining experience.</p>
+            <p>Our team at Passport to India works hard towards making your experience unforgettable.</p>
             <br>
             <br>
             <img src="Logo.jpg" alt="Passport to India" id="logo" border: 3px solid #b85042>
             <br>
             <br>
-            <br>
-            <br>
-            <br>
-            <br>
             <p>Created By: Navya Khandavalli Updated: Oct 2020</p>
         </center>
-    </div>
-</body>
-</html>
