--- a/gobimanchurian.html
+++ b/gobimanchurian.html
@@ -9,6 +9,7 @@
       <li><a href="aboutpage.html">ABOUT</a></li>
       <li><a href="index.html">HOME</a></li>
     </ul>
+
     <ul id="menuNav">
       <li><a href="chickenpakora.html">Chicken Pakora</a></li>
       <li><a href="gobimanchurian.html">Gobi Manchurian</a></li>
@@ -17,16 +18,18 @@
       <li><a href="gulabjamun.html">Gulab Jamun</a></li>
     </ul>
 
-    <!--Restaurant Contents, Changes for the various pages-->
+<!--Restaurant Contents, Changes for the various pages-->
+
     <div id=para>
         <center>
-            <h1>Passport to India</h1>
-            <p>Passport to India serves a traditional Indian cuisine that will take guests to the equisite taste of India.</p>
-            <p>Our mission is to share our family's authentic Indian recipes with the world.</P>
-            <p>We aim to connect our dining experience in the same way our food is connected to the magestic taste of India.</p>
+            <h1 id="GobiManchurian">Gobi Manchurian</h1>
+            <img id=Gobi src="Gobi-Manchurian.jpg" alt="Gobi Manchurian" height = "250px" width = "300px" border: 3px solid #b85042>
+            <p>Gobi Manchurian is a dish that is a nice mix between sweet and savory.</p>
+            <p>This dish is made out of cauliflower and manchirian sauce.</p>
+            <p>The crispy and delicious appetizer is very popular in India.</p>
+            <br>$11.49/plate
             <br>
             <br>
-            <img src="Logo.jpg" alt="Passport to India" id="logo" border: 3px solid #b85042>
             <br>
             <br>
             <br>
@@ -35,6 +38,3 @@
             <br>
             <p>Created By: Navya Khandavalli Updated: Oct 2020</p>
         </center>
-    </div>
-</body>
-</html>
