--- a/contactpage.html
+++ b/contactpage.html
@@ -9,6 +9,7 @@
       <li><a href="aboutpage.html">ABOUT</a></li>
       <li><a href="index.html">HOME</a></li>
     </ul>
+
     <ul id="menuNav">
       <li><a href="chickenpakora.html">Chicken Pakora</a></li>
       <li><a href="gobimanchurian.html">Gobi Manchurian</a></li>
@@ -20,21 +21,19 @@
     <!--Restaurant Contents, Changes for the various pages-->
     <div id=para>
         <center>
-            <h1>Passport to India</h1>
-            <p>Passport to India serves a traditional Indian cuisine that will take guests to the equisite taste of India.</p>
-            <p>Our mission is to share our family's authentic Indian recipes with the world.</P>
-            <p>We aim to connect our dining experience in the same way our food is connected to the magestic taste of India.</p>
+            <h1>Contact</h1>
+            <p>We appreciate all forms of feedback! If you need to contact us, please use the information below.</p>
+            <p>Call the number below to place an online order or make a reservation.</p>
+            <p>Phone Number:(519) 978-4733</p>
+            <p>Email:passporttoindia@gmail.com</p>
+            <p>Follow us on Social Media</p>
             <br>
             <br>
-            <img src="Logo.jpg" alt="Passport to India" id="logo" border: 3px solid #b85042>
-            <br>
-            <br>
-            <br>
-            <br>
+            <img src="Social Media.jpg" alt="Social Media" id="logo" border: 3px solid #b85042>
             <br>
             <br>
             <p>Created By: Navya Khandavalli Updated: Oct 2020</p>
         </center>
     </div>
-</body>
-</html>
+  </body>
+  </html>
