--- a/mangokulfi.html
+++ b/mangokulfi.html
@@ -9,6 +9,7 @@
       <li><a href="aboutpage.html">ABOUT</a></li>
       <li><a href="index.html">HOME</a></li>
     </ul>
+
     <ul id="menuNav">
       <li><a href="chickenpakora.html">Chicken Pakora</a></li>
       <li><a href="gobimanchurian.html">Gobi Manchurian</a></li>
@@ -17,16 +18,17 @@
       <li><a href="gulabjamun.html">Gulab Jamun</a></li>
     </ul>
 
-    <!--Restaurant Contents, Changes for the various pages-->
+<!--Restaurant Contents, Changes for the various pages-->
+
     <div id=para>
         <center>
-            <h1>Passport to India</h1>
-            <p>Passport to India serves a traditional Indian cuisine that will take guests to the equisite taste of India.</p>
-            <p>Our mission is to share our family's authentic Indian recipes with the world.</P>
-            <p>We aim to connect our dining experience in the same way our food is connected to the magestic taste of India.</p>
+            <h1 id="Mango Kulfi">Mango Kulfi</h1>
+            <img src="Mango-Kulfi.jpg" alt="Mango Kulfi" height = "250px" width = "250px" border: 3px solid #b85042>
+            <p>Mango Kulfi is a very creamy dessert that is often reffered to as the Indian version of mango ice cream.</p>
+            <p>This popular dessert is enriched with many magnificent flavors such as mangoes and nuts.</p>
+            <p>This dessert is the ultimate summer dessert for mango lovers.</p>
+            <p>$4.99</p>
             <br>
-            <br>
-            <img src="Logo.jpg" alt="Passport to India" id="logo" border: 3px solid #b85042>
             <br>
             <br>
             <br>
@@ -35,6 +37,3 @@
             <br>
             <p>Created By: Navya Khandavalli Updated: Oct 2020</p>
         </center>
-    </div>
-</body>
-</html>
